# gssquared

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  DevelopLog.md  Documentation.md  Makefile  README.md  bus.cpp  bus.hpp  clock.cpp  clock.hpp  cmake_install.cmake  cpu.cpp  cpu.hpp  debug.cpp  debug.hpp  event_poll.cpp  event_poll.hpp  genopcodenames.pl  gs2  gs2.cpp  gs2.hpp  hw  launch.json  memory.cpp  memory.hpp  memoryspecs.hpp  opcodes.cpp  opcodes.hpp  platforms.cpp  platforms.hpp  test.cpp  test.hpp  types.hpp
Docs/: AppleIII.md  AppleIIe.md  AppleMemoryExpansionCard.md  AppleMouse.md  C800-CFFF.md  CPURefactor.md  CPUs.md  Clipboard.md  Compatibility.md  ControlOverlay.md  Debugger.md  DevelopLog.md  DiskII.md  DisplayNG.md  DisplayPP.md  Documentation.md  DoubleHiRes.md  EpsonMX80.md  HiRes.md  Imagewriter.md  KeyboardShortcuts.md  MMU.md  Mockingboard.md  Parallel.md  ProDOS_Block.md  Roadmap.md  SaveAndRestore.md  SmartPort.md  StateRefactor.md  Thunderclock.md  Tracing.md  VideoTerm.md  XRGB.md
apps/cputest/: CMakeLists.txt  main.cpp
apps/cycletest/: CMakeLists.txt  main.cpp
apps/denibblizer/: CMakeLists.txt  main.cpp
apps/diskid/: CMakeLists.txt  Makefile  main.cpp
apps/dpp/: CMakeLists.txt  main.cpp
apps/gstrace/: CMakeLists.txt  main.cpp
apps/iieromcsum/: CMakeLists.txt  main.cpp
apps/mmutest/: CMakeLists.txt  main.cpp
apps/montest/: CMakeLists.txt  main.cpp
apps/nibblizer/: CMakeLists.txt  Makefile  main.cpp
apps/speaker/: CMakeLists.txt  main.cpp
apps/test_6502/: main.cpp
apps/trace/: CMakeLists.txt
assets/: GSSquared.desktop  Info.plist  Info.plist.in
assets/img/: GS2TextureAtlas.xcf  appleIIlogo.xcf  build.sh  gs2.icns
assets/roms/apple2/: main.rom
cpus/: core_6502.cpp  core_6502.hpp  cpu_6502.cpp
devices/: diskii.cpp  diskii.hpp  keyboard.cpp  keyboard.hpp  loader.cpp  loader.hpp  speaker.cpp  thunderclockplus.cpp
display/: calctxt.pl  display.cpp  display.hpp  hgr_280x192.cpp  hgr_280x192.hpp  lores_40x48.cpp  lores_40x48.hpp  text_40x24.cpp  text_40x24.hpp
emulator_device_tests/audio_lores_1/: LEMONADE.dump
emulator_device_tests/tcp_rdtime/: Makefile  _FileInformation.txt  tcp_rdtime  tcp_rdtime.a65  tcp_rdtime_Output.txt
roms/: Makefile  download_roms.py
roms/apple2/: roms.json
roms/apple2_plus/: roms.json
roms/apple2e/: roms.json
src/: Device_ID.hpp  Module_ID.hpp  SlotData.hpp  build_config.hpp.in  bus.cpp  bus.hpp  clock.cpp  clock.hpp  computer.cpp  computer.hpp  cpu.cpp  cpu.hpp  debug.cpp  debug.hpp  devices.cpp  devices.hpp  event_poll.cpp  event_poll.hpp  gs2.cpp  gs2.hpp  memory.cpp  memory.hpp  memoryspecs.hpp  opcodes.cpp  opcodes.hpp  paths.cpp  paths.hpp  platforms.cpp  platforms.hpp  slots.cpp  slots.hpp  systemconfig.cpp  systemconfig.hpp  test.cpp  test.hpp  version.h.in  videosystem.cpp  videosystem.hpp
src/cpus/: core_6502.cpp  core_6502.hpp  cpu_6502.cpp  cpu_65c02.cpp
src/debugger/: ExecuteCommand.cpp  ExecuteCommand.hpp  MemoryWatch.cpp  MemoryWatch.hpp  MonitorCommand.cpp  MonitorCommand.hpp  debugwindow.cpp  debugwindow.hpp  disasm.cpp  disasm.hpp  monitor.cpp  monitor.hpp  trace.cpp  trace.hpp  trace_opcodes.cpp  trace_opcodes.hpp
src/devices/: diskii.cpp  loader.cpp  loader.hpp
src/devices/annunciator/: annunciator.cpp  annunciator.hpp
src/devices/diskii/: diskii.cpp  diskii.hpp  diskii_fmt.cpp  diskii_fmt.hpp
src/devices/displaypp/: CharRom.cpp  CharRom.hpp  RGBA.hpp  text40.cpp
src/devices/game/: gamecontroller.cpp  gamecontroller.hpp  mousewheel.cpp  mousewheel.hpp
src/devices/iiememory/: iiememory.cpp  iiememory.hpp
src/devices/keyboard/: keyboard.cpp  keyboard.hpp
src/devices/languagecard/: languagecard.cpp  languagecard.hpp
src/devices/memoryexpansion/: memexp.cpp  memexp.hpp
src/devices/mockingboard/: mb.cpp  mb.hpp
src/devices/parallel/: parallel.cpp  parallel.hpp
src/devices/pdblock2/: pdblock2.cpp  pdblock2.hpp
src/devices/prodos_block/: Makefile  bin2cpp.py  pd_block_firmware  pd_block_firmware.a65  pd_block_firmware.hpp  prodos_block.cpp  prodos_block.hpp
src/devices/prodos_clock/: prodos_clock.cpp  prodos_clock.hpp
src/display/: DisplayBase.cpp  DisplayBase.hpp  DisplayComposite.cpp  DisplayComposite.hpp  DisplayMono.cpp  DisplayMono.hpp  DisplayRGB.cpp  DisplayRGB.hpp  DisplayTV.cpp  DisplayTV.hpp  Matrix3x3.cpp  Matrix3x3.hpp  OECommon.h  OEVector.cpp  OEVector.h  VideoScannerII.cpp  VideoScannerII.hpp  VideoScannerIIe.cpp  VideoScannerIIe.hpp  display.cpp  display.hpp  displayng.cpp  displayng.hpp  filters.cpp  filters.hpp  font.cpp  font.hpp  hgr.cpp  hgr.hpp  hgr_280x192.cpp  hgr_280x192.hpp  lgr.cpp  lgr.hpp  lores_40x48.cpp  lores_40x48.hpp  ntsc.cpp  ntsc.hpp  ntsc_setup.cpp  ntsc_setup.hpp  text_40x24.cpp  (+2 more)
src/mbus/: DiskIIMessage.hpp  KeyboardMessage.hpp  Message.cpp  Message.hpp  MessageBus.cpp  MessageBus.hpp
src/mmus/: mmu.cpp  mmu.hpp  mmu_ii.cpp  mmu_ii.hpp  mmu_iie.cpp  mmu_iie.hpp  mmu_iiplus.cpp  mmu_iiplus.hpp
src/ui/: AssetAtlas.cpp  AssetAtlas.hpp  Button.cpp  Button.hpp  Clipboard.cpp  Clipboard.hpp  Container.cpp  Container.hpp  DiskII_Button.cpp  DiskII_Button.hpp  FadeButton.cpp  FadeButton.hpp  MainAtlas.cpp  MainAtlas.hpp  ModalContainer.cpp  ModalContainer.hpp  MousePositionTile.cpp  MousePositionTile.hpp  OSD.cpp  OSD.hpp  SelectSystem.cpp  SelectSystem.hpp  Style.hpp  TextInput.cpp  TextInput.hpp  Tile.cpp  Tile.hpp  Unidisk_Button.cpp  Unidisk_Button.hpp  assets.cpp
src/util/: DeviceFrameDispatcher.cpp  DeviceFrameDispatcher.hpp  Event.cpp  Event.hpp  EventDispatcher.cpp  EventDispatcher.hpp  EventQueue.cpp  EventQueue.hpp  EventTimer.cpp  EventTimer.hpp  HexDecode.cpp  HexDecode.hpp  ResourceFile.cpp  ResourceFile.hpp  TextRenderer.cpp  TextRenderer.hpp  dialog.cpp  dialog.hpp  media.cpp  media.hpp  mount.cpp  mount.hpp  reset.cpp  reset.hpp  resourcefiles.cpp  resourcefiles.hpp  soundeffects.cpp  soundeffects.hpp  strndup.h
utils/: Makefile  bcd-test.pl  binprint  binprint.c  char-rom-print  char-rom-print.c  mx80-rom-print.c  videx-char-rom  videx-char-rom.c
(+22 files in other folders)
